.metadata/.plugins/org.eclipse.cdt.ui/Choices.build.log
10:52:59 **** Incremental Build of configuration Debug for project Choices ****
make all 
Building file: ../src/Choices.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Choices.d" -MT"src/Choices.d" -o "src/Choices.o" "../src/Choices.cpp"
../src/Choices.cpp: In function ‘int main()’:
../src/Choices.cpp:18:15: error: ‘L2’ was not declared in this scope
  cin >> L1 >> L2;
               ^
../src/Choices.cpp:15:7: warning: unused variable ‘l2’ [-Wunused-variable]
  long l2;
       ^
make: *** [src/Choices.o] Error 1

10:52:59 Build Finished (took 222ms)

